--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,8 @@ body {
 #main_title {
   color: #000080;
   font-family: "Lucida Console";
+  letter-spacing: 3px;
+  margin-bottom: 3px;
 }
 
 .column {
@@ -18,20 +20,54 @@ body {
 
 .text{
   font-family: "Lucida Console";
-  font-size: 18px
+  font-size: 22px;
+  letter-spacing: 1px;
+  margin: 0;
 }
 
 .image_selector{
-  margin-bottom: 5px
+  margin-bottom: 5px;
+  width: 500px;
+  overflow-x:scroll;
+  white-space: nowrap;
+}
+
+.image_selector::-webkit-scrollbar {
+    -webkit-appearance: none;
+}
+
+.image_selector::-webkit-scrollbar:horizontal {
+    height: 11px;
+}
+
+.image_selector::-webkit-scrollbar-thumb {
+    border-radius: 8px;
+    border: 2px solid white;
+    background-color: rgba(0, 50, 100, .5);
+}
+
+.image_selector::-webkit-scrollbar-track {
+    background-color: #fff;
+    border-radius: 8px;
 }
 
 .image{
-  width:75px;
+  width: 90px;
+}
+
+#sketchpad{
+  border-style: double;
+  border-radius:4px;
 }
 
 .column1 {
   float: left;
   width: 100px;
+}
+
+.column2 {
+  float: left;
+  width: 150px;
 }
 
 #color-picker-container {
@@ -43,7 +79,6 @@ body {
 
 .buttons {
     float:left;
-    width:220px;
     height:50px;
     padding:10px;
     border-radius:4px;
@@ -55,4 +90,12 @@ body {
     -webkit-appearance: none;
     background: #000080;
     color: #dff5f2;
+}
+
+#nextpage {
+  font-size: 15px;
+  padding: 10px;
+  -webkit-appearance: none;
+  background: #000080;
+  color: #dff5f2;
 }
